Further usercard readibility. Made it visible which "tab" is actiavated - should be enough to hint user that you can click "following" / "followers". Fixes #77

--- a/src/_variables.scss
+++ b/src/_variables.scss
@@ -27,3 +27,14 @@ $fallback--tooltipRadius: 5px;
 $fallback--avatarRadius: 4px;
 $fallback--avatarAltRadius: 10px;
 $fallback--attachmentRadius: 10px;
+
+$usercard-text-shadow-color: rgba(0,0,0,.3);
+$usercard-text-shadow: 0px 1px 5px rgba(0, 0, 0, .7),
+0 1px 0px $usercard-text-shadow-color,
+0 -1px 0px $usercard-text-shadow-color,
+1px 0 0px $usercard-text-shadow-color,
+-1px 0 0px $usercard-text-shadow-color,
+1px -1px 0px $usercard-text-shadow-color,
+-1px 1px 0px $usercard-text-shadow-color,
+1px 1px 0px $usercard-text-shadow-color,
+-1px -1px 0px $usercard-text-shadow-color;
